[project]
name = "lang2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "aiofiles>=24.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "folium>=0.14.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-deepseek>=0.1.3",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-tavily>=0.2.11",
    "langgraph-cli[inmem]>=0.3.4",
    "matplotlib>=3.10.3",
    "mcp>=1.11.0",
    "numpy>=1.24.0",
    "openai>=1.95.1",
    "pandas>=2.0.0",
    "pydantic>=2.11.7",
    "pyproj>=3.6.0",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "requests>=2.28.0",
    "scikit-learn>=1.7.0",
    "shapely>=2.0.0",
]


 
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
 
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true